# homework

Demo/: CMakeLists.txt  README.md
Demo/data/: bunny.m
Demo/include/: MyMesh.h
Demo/src/: main.cpp
